# Partcile_simulation_CUDA

./: .gitignore
dem/headers/: computehelper.cuh  configreader.cuh  parseCLAarguments.cuh  particlesystem.cuh  vtkwriter.cuh
dem/implementation/GPU/: main.cu
dem/refrence_input_files/: input1  inputfilegenerator.py  refrencefileformat  stabilitytest1  stabilitytest2  stabilitytest3
juliaset/: CMakeLists.txt  README.md  build_run.sh
juliaset/lib/: CMakeLists.txt
juliaset/src/CPU/: CMakeLists.txt  juliaser-cpu.cpp
juliaset/src/GPU/: CMakeLists.txt  juliaser-gpu.cu
particlesimuaccelaration/: .gitignore  CMakeLists.txt  build_run.sh  cleaner.sh
particlesimuaccelaration/headers/: computehelper.cuh  configreader.cuh  parseCLAarguments.cuh  particlesystem.cuh  vtkwriter.cuh
particlesimuaccelaration/implementation/GPU/: CMakeLists.txt  main.cu
particlesimuaccelaration/performaneplotting/: inputfilegenerator.py  inputsim2  inputsim3  insim4  performance.sh  performance.sh.o1723778  performance.sh.o1723779  plot.py  plotjob.sh  plotjob2.sh  sim.sh  sim.sh.o1716989  sim.sh.o1724521  sim.sh.o1724563  sim.sh.o1724580  sim.sh.o1724582  vtkfilegen.py
particlesimuaccelaration/performaneplotting/newdat/: sim-datcutoff  sim-datnbdaccv1
particlesimuaccelaration/performaneplotting/old_data/: res_110592_points  sim-dat_old_nosyssync  sim-datcutoffwork  sim-datnbdacc  sim-datv1
particlesimuaccelaration/refrence_input_files/: input1  refrencefileformat
streambenchmark/: README.md
streambenchmark/src/stream/: Makefile  bench_plot.sh  stream-gpu.cu  stream-util.h
